--- a/post/my.css
+++ b/post/my.css
@@ -111,7 +111,7 @@ p{
     border-radius: 30pt;
     font-family: 'Inria Sans';
     font-style: normal;
-    font-size: 40px;
+    font-size: 20px;
     color: white;
     top: 0;
     margin-top: 0;
@@ -121,7 +121,6 @@ p{
 }
 
 #direita{
-    text-align: center;
     position: absolute;
     right: 3vw;
     top: 25vh;
@@ -129,67 +128,47 @@ p{
     width: 25vw;
     height: 100vh;
     border-radius: 30pt;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.logotwiter{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 1px;
-    left: 50px;
-    transform: translate(-50%);
-    z-index: 10;
+.logos{
+    position: relative;
+    display: flex;
 }
-.logoinsta{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 1px;
-    left: 110px;
-    transform: translate(-50%);
-    z-index: 10;
+.imgpd{
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
-.logoyoutube{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 1px;
-    left: 170px;
-    transform: translate(-50%);
-    z-index: 10;
-}
-.logoface{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 1px;
-    left: 230px;
-    transform: translate(-50%);
-    z-index: 10;
-}
-.logopinterest{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 1px;
-    left: 290px;
-    transform: translate(-50%);
-    z-index: 10;
+.logo{
+    height: 5vh;
+    border-radius: 10pt;
 }
 .logopd{
-    position: absolute;
     height: 30vh;
-    top: 1px;
-    left: 50%;
-    transform: translate(-50%);
     border-radius: 30pt;
 }
 
-
 .descgrp{
-    position: absolute;
+    text-align: center;
     top: 30vh;
-    left: 50%;
-    transform: translate(-50%);
     background-color:transparent;
     color: #000000;
+    margin-bottom: 20vh;
+}
+
+#textodopost{
+    background-color: transparent;
+    font-family: 'Inria Sans';
+    font-style: normal;
+    font-size: 25px;
+    color: black;
+    padding-top: 2vh;
+    width: 100%;
+}
+
+.imagemdopost{
+    display: flex;
+    justify-content: center;
 }
