--- a/post/my.css
+++ b/post/my.css
@@ -111,7 +111,7 @@ p{
     border-radius: 30pt;
     font-family: 'Inria Sans';
     font-style: normal;
-    font-size: 20px;
+    font-size: 2vh;
     color: white;
     top: 0;
     margin-top: 0;
@@ -162,7 +162,7 @@ p{
     background-color: transparent;
     font-family: 'Inria Sans';
     font-style: normal;
-    font-size: 25px;
+    font-size: 2vh;
     color: black;
     padding-top: 2vh;
     width: 100%;
